# CapybaraICSE27

./: MANIFEST.json  README.md  checksums.sha256  run_companion_pipeline.py
01-dataset-construction/full-ui-test-corpus/: DATA_DICTIONARY.md  README.md  (+4 more)
02-analysis-model/: README.md
03-manual-review-results/: README.md
04-rq6-agent-generation/: README.md  rq6_repositories.csv  rq6_repositories.json
04-rq6-agent-generation/benchmark/capybara-benchmark/: .gitignore  .gitmodules  README.md  deploy.py  generate_manifest.py  gridstack-manifest.jsonl  manifest.jsonl  pyproject.toml  run_eval.sh  serve.sh
04-rq6-agent-generation/benchmark/capybara-benchmark/scripts/: deploy_all.sh  deploy_gridstack.sh  deploy_motion_vue.sh  deploy_openplayerjs.sh  deploy_swup.sh  deploy_zudoku.sh
04-rq6-agent-generation/harness/general-agent-eval/: .gitignore  README.md  pyproject.toml
04-rq6-agent-generation/harness/general-agent-eval/docker/: Dockerfile.base  Dockerfile.claude-code  Dockerfile.codex  Dockerfile.javascript
04-rq6-agent-generation/harness/general-agent-eval/resources/scripts/: run-with-service.sh  services.json
04-rq6-agent-generation/harness/general-agent-eval/src/general_agent_eval/: __init__.py
04-rq6-agent-generation/harness/general-agent-eval/src/general_agent_eval/general_agents/: __init__.py  agent_specs.py  claude_code.py  codex.py
04-rq6-agent-generation/harness/general-agent-eval/src/general_agent_eval/orchestration/: __init__.py  cli.py  docker.py  errors.py  manifest.py  paths.py  preprocess.py  run.py  services.py  staging.py
04-rq6-agent-generation/harness/general-agent-eval/src/general_agent_eval/preprocessing/: __init__.py  git_reset.py  js_test_clearing.py
04-rq6-agent-generation/harness/general-agent-eval/src/general_agent_eval/prompts/: __init__.py  system_prompt_js_ui.jinja2  user_prompt_js_ui.jinja2
04-rq6-agent-generation/harness/general-agent-eval/src/general_agent_eval/recovery/: __init__.py  recover_full_repo.py
04-rq6-agent-generation/harness/general-agent-eval/tests/general_agents/: test_codex.py  test_system_prompt.py
04-rq6-agent-generation/harness/general-agent-eval/tests/orchestration/: test_docker_preprocessing.py  test_service_integration.py
04-rq6-agent-generation/harness/general-agent-eval/tests/preprocessing/: test_js_test_clearing.py
04-rq6-agent-generation/harness/general-agent-eval/tests/recovery/: test_recover_full_repo.py
05-implementation/: README.md
(+329 files in other folders)
