[project]
name = "capybara-benchmark"
version = "0.1.0"
description = "Benchmark harness for capybara — deploys and tests JS projects"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
deploy = "deploy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deploy.py"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]
